--- a/requirements.txt
+++ b/requirements.txt
@@ -43,4 +43,5 @@ typing_extensions==4.14.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 yarl==1.20.1
-google-generativeai==0.3.2
+google-generativeai==0.3.1
+flask
