--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,6 @@ Jinja2==3.1.6
 jiter==0.10.0
 MarkupSafe==3.0.2
 multidict==6.6.2
-openai==1.93.0
 packaging==25.0
 propcache==0.3.2
 psycopg2-binary==2.9.10
@@ -43,5 +42,4 @@ typing_extensions==4.14.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 yarl==1.20.1
-google-generativeai>=0.3.1
-flask
+google-generativeai==0.8.5
