--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,6 @@ Werkzeug==3.1.3
 yarl==1.20.1
 google-generativeai==0.8.5
 langchain-community==0.0.27
+sentence-transformers>=2.2.2
+faiss-cpu>=1.7.4
+numpy>=1.24.0
